NOOP: Fix column chart scrollbar overlap with long labels on card expand.
QA: None

--- a/app/styles/dataCards/column-chart.sass
+++ b/app/styles/dataCards/column-chart.sass
@@ -266,5 +266,5 @@ div.column-chart
         @include prefixer(transform, rotate(45deg))
         @include prefixer(transform-origin, top left)
         margin-top: -6px
-        overflow: visible
+        overflow: hidden
         position: initial
